--- a/views/navigation.erb
+++ b/views/navigation.erb
@@ -1,5 +1,7 @@
+
+
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <a class="navbar-brand" href="/">YourApp</a>
+  <a class="navbar-brand" href="/">Home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -20,6 +22,7 @@
         
       <% else %>
         <li class="nav-item">
+
           <a class="nav-link" href="/login">Login</a>
         </li>
         <li class="nav-item">
