--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,17 +2,15 @@ body,
 html {
 	width: 100%;
 	height:100%;
+ 	background-repeat: no-repeat;
+ 	background-color: #33cccc;
+ 	font-family: 'Oxygen', sans-serif;
 }
+	
 body {
 	font-family: 'Source Sans Pro';
 }
-.jumbotron {
-	background-image: 
-url("../img/tumblr_inline_pd2u82GMVG1spvpit_540.png");
-background-size: cover;
-padding: 230px 0;
-margin: 15px;
-}
+
 
 .container h1 {
 	color: #FFFFFF;
@@ -41,10 +39,12 @@ footer.footer .social-link:hover {
 }
 
 a {
-  color: #3300cc;
+  color: #1D809F;
 }
 
 a:hover, a:focus, a:active {
-  color: #3300cc;
+  color: #155d74;
 }
+
+
 
