--- a/views/index.erb
+++ b/views/index.erb
@@ -1,20 +1,90 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
-<link rel="stylesheet" href="css/master-tracker.css" type="text/css"/>
+<!-- /container -->
+<link href="css/master-tracker.css" rel="stylesheet" type="text/css"/>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<style type="text/css">
+    /* Move down content because we have a fixed navbar that is 3.5rem tall */
+    body {
+      padding-top: 3.5rem;
+      background-color:#000000;
+    }
+  </style>
+ 
+<!-- This is where the carousel will go --> 
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
 
-<div class="jumbotron"> </div>
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+
+    <div class="item active">
+      <img style="height:200px" style="width:300px" src="img/netflix-sign-2.jpg" alt="Netflix">
+    </div>
+
+    <div class="item">
+      <img style="height:200px" style="width:300px" src="img/hulu.jpg" alt="Hulu">
+    </div>
+
+    <div class="item">
+      <img style="height:200px; width:300px" src="img/td-amazon-hero.svg" alt="Amazon">
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+ 
   
 <div class="container">
   <h1 class="display-3">MASTER TRACKER</h1>
 
-  <p>Do you have too many accounts and are having trouble keeping track of them? We're here to help!</p>
+  <p>Do you have to many accounts, that you can't even keep track of them. Well let us help you!</p>
   
   <p><a class="btn btn-primary btn-lg" href="#" role="button">Sign In &raquo;</a></p>
 
 </div>
 
-  <!-- Example row of columns -->
+<!-- Footer -->
+    <footer class="footer text-center">
+      <div class="container">
+        <ul class="list-inline mb-5">
+          <li class="list-inline-item">
+            <a class="social-link rounded-circle text-white mr-3" href="#">
+              <i class="icon-social-facebook"></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="social-link rounded-circle text-white mr-3" href="#">
+              <i class="icon-social-twitter"></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="social-link rounded-circle text-white" href="#">
+              <i class="icon-social-github"></i>
+            </a>
+          </li>
+        </ul>
+        <p class="text-muted small mb-0">Copyright &copy; Your Website 2018</p>
+      </div>
+    </footer>
+   <!--Example row of columns -->
 
 
 
 
- <!-- /container -->
+ 
