--- a/views/index.erb
+++ b/views/index.erb
@@ -53,7 +53,7 @@
 <div class="container">
   <h1 class="display-3">MASTER TRACKER</h1>
 
-  <p>Do you have to many accounts, that you can't even keep track of them. Well let us help you!</p>
+  <p>Do you have too many accounts and are having problems keeping track of them? Let us help you!</p>
   
   <p><a class="btn btn-primary btn-lg" href="#" role="button">Sign In &raquo;</a></p>
 
