--- a/views/charge.erb
+++ b/views/charge.erb
@@ -1,2 +1,16 @@
-@@ charge
-  <h2>Thanks, you paid <strong>$5.00</strong>!</h2>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+<style type="text/css">
+	body {
+		background-color: #000000;
+	}
+</style>
+
+<body>
+	<div id="/charge">
+		@@ charge
+  		<h2>Thanks, you paid <strong>$5.00</strong>!</h2>
+	</div>
+</body>
