--- a/views/index.erb
+++ b/views/index.erb
@@ -1,16 +1,17 @@
-<!-- Main jumbotron for a primary marketing message or call to action -->
+<!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <!-- /container -->
-<link href="css/master-tracker.css" rel="stylesheet" type="text/css"/>
+<link href="css/index.css" rel="stylesheet" type="text/css"/>
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 <style type="text/css">
-    /* Move down content because we have a fixed navbar that is 3.5rem tall */
-    body {
-      padding-top: 3.5rem;
-      background-color:#000000;
-    }
-  </style>
+body{
+  background-color: #000000;
+}
+</style>
  
 <!-- This is where the carousel will go --> 
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -25,15 +26,15 @@
   <div class="carousel-inner">
 
     <div class="item active">
-      <img style="height:200px" style="width:300px" src="img/netflix-sign-2.jpg" alt="Netflix">
+      <img style="height:500px; width:1200px"src="img/netflix-sign-2.jpg" alt="Netflix">
     </div>
 
     <div class="item">
-      <img style="height:200px" style="width:300px" src="img/hulu.jpg" alt="Hulu">
+      <img style="height:500px; width:1200px" src="img/hulu.jpg" alt="Hulu">
     </div>
 
     <div class="item">
-      <img style="height:200px; width:300px" src="img/td-amazon-hero.svg" alt="Amazon">
+      <img style="height:500px; width:1200px" src="img/td-amazon-hero.svg" alt="Amazon">
     </div>
   </div>
 
@@ -51,7 +52,7 @@
  
   
 <div class="container">
-  <h1 class="display-3">MASTER TRACKER</h1>
+  <h1 class="display-3" style="color:#66cccc">MASTER TRACKER</h1>
 
   <p>Do you have to many accounts, that you can't even keep track of them. Well let us help you!</p>
   
@@ -65,17 +66,17 @@
         <ul class="list-inline mb-5">
           <li class="list-inline-item">
             <a class="social-link rounded-circle text-white mr-3" href="#">
-              <i class="icon-social-facebook"></i>
+              <i href="#"class="fa fa-facebook"></i>
             </a>
           </li>
           <li class="list-inline-item">
             <a class="social-link rounded-circle text-white mr-3" href="#">
-              <i class="icon-social-twitter"></i>
+              <i href="#" class="fa fa-twitter"></i>
             </a>
           </li>
           <li class="list-inline-item">
             <a class="social-link rounded-circle text-white" href="#">
-              <i class="icon-social-github"></i>
+              <i href="#" class="fa fa-github"></i>
             </a>
           </li>
         </ul>
