--- a/views/upgrade.erb
+++ b/views/upgrade.erb
@@ -1,4 +1,16 @@
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<style type="text/css">
+  body {
+    background-color: #000000;
+  }
+</style>
+
+
+
 @@ upgrade
+
   <form action="/charge" method="post" class="payment">
     <article>
       <label class="amount">
