--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,7 +3,7 @@ html {
 	width: 100%;
 	height:100%;
  	background-repeat: no-repeat;
- 	background-color: #33cccc;
+ 	background-color: #000000;
  	font-family: 'Oxygen', sans-serif;
 }
 	
@@ -45,6 +45,14 @@ a {
 a:hover, a:focus, a:active {
   color: #155d74;
 }
+
+.container p {
+  line-height: 4.3rem;
+  font-size: 1.5rem;
+  color: #1D809F;
+}
+
+
 
 
 
