--- a/views/authentication/login.erb
+++ b/views/authentication/login.erb
@@ -1,34 +1,33 @@
+
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<style type="text/css">
-		/* Move down content because we have a fixed navbar that is 3.5rem tall */
-		body {
-		  padding-top: 3.5rem;
-		  background-color:#000000;
-		}
-	</style>
 <!------ Include the above in your HEAD tag ---------->
+<style type="text/css">
+    body{
+        background-color: #000000;
+    }
+</style>
 
 <body>
-	<div id="login">
+    <div id="login">
     <h3 class="text-center text-white pt-5"></h3>
     <div class="container">
         <div id="login-row" class="row justify-content-center align-items-center">
             <div id="login-column" class="col-md-6">
                 <div class="login-box col-md-12">
-                    <form id="login-form" class="form" action="" method="post">
+                    <!-- login section of the page -->
+                    <form action="/process_login" method="post">
                         <h3 class="text-center text-info">Login</h3>
                         <div class="form-group">
-                            <label for="username" class="text-info">Username:</label><br>
-                            <input type="text" name="username" id="username" class="form-control">
+                            <label for="email" class="text-info">Email:</label><br>
+                            <input type="text" name="email" class="form-control">
                         </div>
                         <div class="form-group">
                             <label for="password" class="text-info">Password:</label><br>
                             <input type="text" name="password" id="password" class="form-control">
                         </div>
                         <div class="form-group">
-                            <label for="remember-me" class="text-info"><span>Remember me</span> <span><input id="remember-me" name="remember-me" type="checkbox"></span></label><br>
                             <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
                         </div>
                     </form>
