--- a/views/authentication/sign_up.erb
+++ b/views/authentication/sign_up.erb
@@ -1,50 +1,37 @@
-<link rel="stlyesheet" type="text/css" href="css/sign_up.css">
+
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<style type="text/css">
-		/* Move down content because we have a fixed navbar that is 3.5rem tall */
-		body {
-		  padding-top: 3.5rem;
-		  background-color:#000000;
-		}
-	</style>
 <!------ Include the above in your HEAD tag ---------->
+<style type="text/css">
+    body{
+    background-color: #000000;
+}
+</style>
 
 <body>
-	<div id="login">
-    <h3 class="text-center text-white pt-5"></h3>
-    <div class="container">
-        <div id="login-row" class="row justify-content-center align-items-center">
-            <div id="login-column" class="col-md-6">
-                <div class="login-box col-md-12">
-                    <form id="login-form" class="form" action="register" method="post">
-                        <h3 class="text-center text-info">Register</h3>
+    <div id="register">
+        <h3 class="text-center text-white pt-5"></h3>
+        <div class="container">
+            <div id="sign_up-row" class="row justify-content-center aling-items-center">
+                <div id="sign_up-column" class="col-md-6">
+                    <div class="sign_up-box col-md-12">
+                    <!--- register section of the page --->
+                    <form action="register" method="POST">
+                        <h3 class="text-center text-info">Sign Up</h3>
                         <div class="form-group">
-                            <label for="username" class="text-info">Email:</label><br>
-                            <input type="text" name="username" id="username" class="form-control">
+                            <label for="email" class="text-info">Email:</label><br>
+                            <input type="text" name="email" class="form-control"><br/>
                         </div>
-
-                       <!-- <div class="form-group">
-                            <label for="username" class="text-info">Username:</label><br>
-                            <input type="text" name="username" id="username" class="form-control">
-                        </div> -->
                         <div class="form-group">
                             <label for="password" class="text-info">Password:</label><br>
-                            <input type="text" name="password" id="password" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label for="password" class="text-info">Comfirm Password:</label><br>
-                            <input type="text" name="password" id="password" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label for="remember-me" class="text-info"><span>Remember me</span> <span><input id="remember-me" name="remember-me" type="checkbox"></span></label><br>
-                            <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
+                            <input type="password" name="password" class="form-control"><br/>
+                        <div class="form-group">   
+                        <input type="submit" name="Register"class="btn btn-info btn-md" value="Register">
                         </div>
                     </form>
                 </div>
             </div>
         </div>
     </div>
-</div>
-</body>
+</body> 
