--- a/views/index.erb
+++ b/views/index.erb
@@ -54,7 +54,7 @@ body{
 <div class="container">
   <h1 class="display-3" style="color:#66cccc">MASTER TRACKER</h1>
 
-  <p>Do you have to many accounts, that you can't even keep track of them. Well let us help you!</p>
+  <p>Do you have too many accounts and are having a hard time keeping track? Let us help you!</p>
   
   <p><a class="btn btn-primary btn-lg" href="#" role="button">Sign In &raquo;</a></p>
 
