--- a/views/index.erb
+++ b/views/index.erb
@@ -50,13 +50,16 @@ body{
 </div>
 
  
-  
+<!--- Discription of the websit. -->  
 <div class="container">
   <h1 class="display-3" style="color:#66cccc">MASTER TRACKER</h1>
 
   <p>Do you have too many accounts and are having a hard time keeping track? Let us help you!</p>
+
+  <h2 class="display-3" style="color:#66cccc">About</h2>
+  <p>In today’s age of cord-cutting and subscription-based services, people are rapidly accumulating many recurring fees.  It is often difficult to keep track of which service we are subscribed to and when we’re being charged.  There should be some way to keep track of which services a person is paying for and when they’ll be charged again.</p>
   
-  <p><a class="btn btn-primary btn-lg" href="#" role="button">Sign In &raquo;</a></p>
+  <p><a class="btn btn-primary btn-lg" href="/sign_up" role="button">Sign Up &raquo;</a></p>
 
 </div>
 
