--- a/views/navigation.erb
+++ b/views/navigation.erb
@@ -5,12 +5,14 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
+<!-- collapsed navbar-->
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li> 
 
+<!-- If cx is logined in, this will apear -->
       <% if current_user %>
         <li class="nav-item">
           <a class="nav-link" href="/upgrade">Upgrade</a>
@@ -18,7 +20,7 @@
         <li class="nav-item">
           <a class="nav-link" href="/logout">Logout</a>
         </li>
-        
+<!-- If cx has not logined in, this will give them the option to login -->
       <% else %>
         <li class="nav-item">
 
