--- a/views/authentication/failed_signup.erb
+++ b/views/authentication/failed_signup.erb
@@ -1,5 +1,23 @@
+ 
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
-Error: Username is already taken.
+
+<body>
+	<style type="text/css">
+	body {
+		padding-top: 10rem;
+		background-color: #000000;
+	}
+	</style>
+
+	<h1 class="centered" style="color: #66cccccc;">Username is already taken.</h1>		
+</body>
+
+
+
+
+
+
+
