--- a/views/authentication/successful_signup.erb
+++ b/views/authentication/successful_signup.erb
@@ -1,1 +1,18 @@
-Successfully Signed Up!
+ 
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+<body>
+	<style type="text/css">
+	body {
+		padding-top: 10rem;
+		background-color: #000000;
+	}
+	</style>
+
+	<h1 class="centered" style="color: #66cccc;">Succefully Signed Up!</h1>		
+</body>
+
+
