--- a/views/authentication/failed_signup.erb
+++ b/views/authentication/failed_signup.erb
@@ -8,11 +8,11 @@
 	<style type="text/css">
 	body {
 		padding-top: 10rem;
-		background-color: #000000;
+		background-color: #ffffff;
 	}
 	</style>
 
-	<h1 class="centered" style="color: #66cccccc;">Username is already taken.</h1>		
+	<h1 class="centered" style="color: #66cccc;">Username is already taken.</h1>		
 </body>
 
 
