--- a/views/authentication/invalid_login.erb
+++ b/views/authentication/invalid_login.erb
@@ -8,7 +8,7 @@
 	<style type="text/css">
 	body {
 		padding-top: 10rem;
-		background-color: #000000;
+		background-color: #ffffff;
 	}
 	</style>
 
