--- a/views/authentication/login.erb
+++ b/views/authentication/login.erb
@@ -5,7 +5,8 @@
 <!------ Include the above in your HEAD tag ---------->
 <style type="text/css">
     body{
-        background-color: #000000;
+        padding: 10rem;
+        background-color: #ffffff;
     }
 </style>
 
