--- a/views/index.erb
+++ b/views/index.erb
@@ -1,15 +1,17 @@
+<link href="css/index.css" rel="stylesheet">
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!-- /container -->
-<link href="css/index.css" rel="stylesheet" type="text/css">
+
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 <style type="text/css">
 body{
-  background-color: #000000;
+  padding: 10rem;
+  background-color: #ffffff;
 }
 </style>
  
@@ -26,15 +28,15 @@ body{
   <div class="carousel-inner">
 
     <div class="item active">
-      <img style="height:500px; width:1200px"src="img/netflix-sign-2.jpg" alt="Netflix">
+      <img style="height:500px; width:1200px;" src="img/Chase-Bank-Logo.jpg" alt="Chase Bank">
     </div>
 
     <div class="item">
-      <img style="height:500px; width:1200px" src="img/hulu.jpg" alt="Hulu">
+      <img style="height:500px; width:1200px;" src="img/hulu.jpg" alt="Hulu">
     </div>
 
     <div class="item">
-      <img style="height:500px; width:1200px" src="img/td-amazon-hero.svg" alt="Amazon">
+      <img style="height:500px; width:1200px;" src="img/td-amazon-hero.svg" alt="Amazon">
     </div>
   </div>
 
@@ -52,12 +54,13 @@ body{
  
 <!--- Discription of the websit. -->  
 <div class="container">
-  <h1 class="display-3" style="color:#66cccc">MASTER TRACKER</h1>
+  <h1 class="display-3" style="color:#66cccc"><font face="times new roman"><b>MASTER TRACKER</b></font></h1>
 
-  <p>Do you have too many accounts and are having a hard time keeping track? Let us help you!</p>
+    <p style="color: #66cccc"><font face="times new roman" size="6">Do you have too many accounts and are having a hard time keeping track? Let us help you!</font></p>
 
-  <h2 class="display-3" style="color:#66cccc"> About</h2>
-  <p>In today’s age of cord-cutting and subscription-based services, people are rapidly accumulating many recurring fees.  It is often difficult to keep track of which service we are subscribed to and when we’re being charged.  There should be some way to keep track of which services a person is paying for and when they’ll be charged again.</p>
+  <h2 class="display-3" style="color:#66cccc"><font face="times new roman"><b>About</b></font></h2>
+    
+    <p style="color: #66cccc"><font face="times new roman" size="6">In today’s age of cord-cutting and subscription-based services, people are rapidly accumulating many recurring fees.  It is often difficult to keep track of which service we are subscribed to and when we’re being charged.  There should be some way to keep track of which services a person is paying for and when they’ll be charged again.</font></p>
   
   <p><a class="btn btn-primary btn-lg" href="/sign_up" role="button">Sign Up &raquo;</a></p>
 
@@ -83,7 +86,7 @@ body{
             </a>
           </li>
         </ul>
-        <p class="text-muted small mb-0">Copyright &copy; Your Website 2018</p>
+        <p class="text-muted small mb-0"><font size="6">Copyright &copy; Your Website 2018</font></p>
       </div>
     </footer>
    <!--Example row of columns -->
