--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,8 +11,8 @@
 	<style type="text/css">
 		/* Move down content because we have a fixed navbar that is 3.5rem tall */
 		body {
-		  padding-top: 3.5rem;
-		  background-color: #000000;
+		  padding-top: 10rem;
+		  background-color: #ffffff;
 		}
 	</style>
 	
