--- a/views/authentication/sign_up.erb
+++ b/views/authentication/sign_up.erb
@@ -5,7 +5,7 @@
 <!------ Include the above in your HEAD tag ---------->
 <style type="text/css">
     body{
-    background-color: #000000;
+    background-color: #ffffff;
 }
 </style>
 
