--- a/views/authentication/login.erb
+++ b/views/authentication/login.erb
@@ -5,7 +5,7 @@
 <!------ Include the above in your HEAD tag ---------->
 <style type="text/css">
     body{
-        padding: 10rem;
+        padding: 10rem;         
         background-color: #ffffff;
     }
 </style>
@@ -19,10 +19,10 @@
                 <div class="login-box col-md-12">
                     <!-- login section of the page -->
                     <form action="/process_login" method="post">
-                        <h3 class="text-center text-info">Login</h3>
+                        <h3 class="text-center text-info"><font face="times new roman" size="12"><strong>Login</strong></font></h3>
                         <div class="form-group">
                             <label for="email" class="text-info">Email:</label><br>
-                            <input type="text" name="email" class="form-control">
+                            <input type="text" name="email" class="form-control"></br>
                         </div>
                         <div class="form-group">
                             <label for="password" class="text-info">Password:</label><br>
