--- a/views/charge.erb
+++ b/views/charge.erb
@@ -4,13 +4,12 @@
 <!------ Include the above in your HEAD tag ---------->
 <style type="text/css">
 	body {
-		background-color: #000000;
+		padding: 10rem;
+		background-color: #ffffff;
 	}
 </style>
 
-<body>
 	<div id="/charge">
 		@@ charge
   		<h2>Thanks, you paid <strong>$5.00</strong>!</h2>
 	</div>
-</body>
