--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,10 @@
-<link href="css/index.css" rel="stylesheet">
+
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- index.css stylesheet -->
+<link rel="stylesheet" href="index.css" type="text/css">
 
 <!-- /container -->
-
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -56,13 +57,31 @@ body{
 <div class="container">
   <h1 class="display-3" style="color:#66cccc"><font face="times new roman"><b>MASTER TRACKER</b></font></h1>
 
-    <p style="color: #66cccc"><font face="times new roman" size="6">Do you have too many accounts and are having a hard time keeping track? Let us help you!</font></p>
+    <p style="color: #000000"><font face="times new roman" size="4">Do you have too many accounts and are having a hard time keeping track? Let us help you!</font></p>
 
   <h2 class="display-3" style="color:#66cccc"><font face="times new roman"><b>About</b></font></h2>
     
-    <p style="color: #66cccc"><font face="times new roman" size="6">In today’s age of cord-cutting and subscription-based services, people are rapidly accumulating many recurring fees.  It is often difficult to keep track of which service we are subscribed to and when we’re being charged.  There should be some way to keep track of which services a person is paying for and when they’ll be charged again.</font></p>
+    <p style="color: #000000"><font face="times new roman" size="4">In today’s age of cord-cutting and subscription-based services, people are rapidly accumulating many recurring fees.  It is often difficult to keep track of which service we are subscribed to and when we’re being charged.  There should be some way to keep track of which services a person is paying for and when they’ll be charged again.</font></p>
   
   <p><a class="btn btn-primary btn-lg" href="/sign_up" role="button">Sign Up &raquo;</a></p>
+
+  <h3 class="display-3" style="color: #66cccc"><font face="times new roman">
+    How Does It Work?</font></h3>
+
+    <p><font face="times new roman" size="4">Forgot you were paying for that gym? No longer need that subscription? <strong>Master Tracker</strong> can help cancel unwanted accounts and keep track of the ones you do use.</font></p>
+
+    <p><font face="times new roman" size="4">At <strong>Master Tracker</strong>, we believe in transparency and the power of technology to improve people’s lives. We built a system that analyzes your specific financial situation and works to improve it.</font></p>
+
+    <h4 class="display-3" style="color: #66cccc"><font face="times new roman">Our Mission</font></h4>
+
+    <p><font face="times new roman" size="4"><br>We’ve got your back</br>.
+        <br>There are so many services out there that can help you simplify different parts of your life. Want to find a decent restaurant? Trying to book a cheap flight in a hurry? Need diapers shipped to your house by tomorrow? Done, done and done.</br>
+        <br>So why can’t your financial life be just as simple?</br>
+        <br>That’s why we designed Master Tracker. After thousands of hours of research, we developed a powerful and secure tool that will break down your income, spending and saving for you... so you don’t have to.</br>
+        <br>But we take it one step further by offering insights into your finances that you can use. In the process, we want to return that feeling about your money that you may have lost along the way — that feeling of control.</br>
+        <br>We innovate by listening, caring and serving.</br>
+        <br>We support your financial journey through transparency, simplicity and ease.
+        We believe consumers should have a financial champion who puts their interests first. Link your accounts and find out how Clarity Money does just that.</br></font></p>
 
 </div>
 
@@ -86,11 +105,9 @@ body{
             </a>
           </li>
         </ul>
-        <p class="text-muted small mb-0"><font size="6">Copyright &copy; Your Website 2018</font></p>
+        <p class="text-muted small mb-0"><font size="4">Copyright &copy; Your Website 2018</font></p>
       </div>
     </footer>
-   <!--Example row of columns -->
-
 
 
 
