index.erb edits

--- a/views/index.erb
+++ b/views/index.erb
@@ -77,12 +77,7 @@ body{
     <p><font face="times new roman" size="4"><br>We’ve got your back</br>.
         <br>There are so many services out there that can help you simplify different parts of your life. Want to find a decent restaurant? Trying to book a cheap flight in a hurry? Need diapers shipped to your house by tomorrow? Done, done and done.</br>
         <br>So why can’t your financial life be just as simple?</br>
-        <br>That’s why we designed Master Tracker. After thousands of hours of research, we developed a powerful and secure tool that will break down your income, spending and saving for you... so you don’t have to.</br>
-        <br>But we take it one step further by offering insights into your finances that you can use. In the process, we want to return that feeling about your money that you may have lost along the way — that feeling of control.</br>
-        <br>We innovate by listening, caring and serving.</br>
-        <br>We support your financial journey through transparency, simplicity and ease.
-        We believe consumers should have a financial champion who puts their interests first. Link your accounts and find out how Clarity Money does just that.</br></font></p>
-
+        <br>That’s why we designed Master Tracker.</br>
 </div>
 
 <!-- Footer -->
