--- a/views/index.erb
+++ b/views/index.erb
@@ -3,57 +3,107 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- index.css stylesheet -->
 <link rel="stylesheet" href="index.css" type="text/css">
+<!-- Theme Made By ww.w3schools.com - No Copyright-->
+<tite> Bootstrap Theme Simpy Me</tite>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-<!-- /container -->
+<!-- This helps for the navbar-->
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 <style type="text/css">
 body{
-  padding: 10rem;
+    font:20px Montserrat, san-serif;
+    line-height: 1.8;
+    color: #f5f6f7;
+}
+
+p {font-size: 16px;}
+.margin {
+  margin-bottom: 45px;
+}
+.bg-1 {
+  background-color: #1abc9c; /*Green*/
+  color: #ffffff;
+}
+.bg-2 {
+  background-color: #474e5d; /*Dark Blue*/
+  color: #ffffff;
+}
+.bg-3 {
+  background-color: #bf00ff; /*White*/
+  color: #000000;
+} 
+.bg-4 {
+  background-color: #ffffff;
+  color: #000000;
+}
+.container-fluid {
+  padding-top: 70px;
+  padding-bottom: 70px;
+}
+
+footer.footer .social-link {
+  display: block;
+  height: 4rem;
+  width: 4rem;
+  line-height: 4.3rem;
+  font-size: 1.5rem;
+  background-color: #1D809F;
+  -webkit-transition: background-color 0.15s ease-in-out;
+  transition: background-color 0.15s ease-in-out;
+  -webkit-box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
+}
+
+footer.footer .social-link:hover {
+  background-color: #155d74;
+  text-decoration: none;
+}
+
+footer {
   background-color: #ffffff;
 }
 </style>
- 
-<!-- This is where the carousel will go --> 
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner">
-
-    <div class="item active">
-      <img style="height:500px; width:1200px;" src="img/Chase-Bank-Logo.jpg" alt="Chase Bank">
-    </div>
-
-    <div class="item">
-      <img style="height:500px; width:1200px;" src="img/hulu.jpg" alt="Hulu">
-    </div>
-
-    <div class="item">
-      <img style="height:500px; width:1200px;" src="img/td-amazon-hero.svg" alt="Amazon">
-    </div>
-  </div>
-
-  <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="sr-only">Next</span>
-  </a>
+ <!-- First Container -->
+<div class="container-fluid bg-1 text-center">
+  <h3 class="margin">Master Tracker</h3>
 </div>
 
+<!-- Second Container -->
+<div class="container-fluid bg-2 text-center">
+  <h3 class="margin">About Master Tracker</h3>
+  <p>In today’s age of cord-cutting and subscription-based services, people are rapidly accumulating many recurring fees.  It is often difficult to keep track of which service we are subscribed to and when we’re being charged.  There should be some way to keep track of which services a person is paying for and when they’ll be charged again.</p>
+</div>
  
-<!--- Discription of the websit. -->  
+ <!-- Third Container -->
+ <div class="container-fluid bg-3
+ text-center">
+    <h3 class="margin">How Does It Work</h3>
+    <p>Forgot you were paying for that gym? No longer need that subscription? <strong>Master Tracker</strong> can help cancel unwanted accounts and keep track of the ones you do use.</p>
+    <p>Master Tracker</strong>, we believe in transparency and the power of technology to improve people’s lives. We built a system that analyzes your specific financial situation and works to improve it.</p>
+    <p>At <strong>Master Tracker</strong>, we believe in transparency and the power of technology to improve people’s lives. We built a system that analyzes your specific financial situation and works to improve it.</</p>
+</div>
+
+<!-- Fourth Conatianer -->
+<div class="container-fluid bg-4
+  text-center">
+  <h3 class="margin">Our Mission</h3>
+  <p>We’ve got your back
+        <br>There are so many services out there that can help you simplify different parts of your life. Want to find a decent restaurant? Trying to book a cheap flight in a hurry? Need diapers shipped to your house by tomorrow? Done, done and done.</br>
+        <br>So why can’t your financial life be just as simple?</br>
+        <br>That’s why we designed Master Tracker.</br></p>
+</div>
+
+
+<!--- Discription of the websit. -- 
 <div class="container">
   <h1 class="display-3" style="color:#66cccc"><font face="times new roman"><b>MASTER TRACKER</b></font></h1>
 
@@ -78,7 +128,7 @@ body{
         <br>There are so many services out there that can help you simplify different parts of your life. Want to find a decent restaurant? Trying to book a cheap flight in a hurry? Need diapers shipped to your house by tomorrow? Done, done and done.</br>
         <br>So why can’t your financial life be just as simple?</br>
         <br>That’s why we designed Master Tracker.</br>
-</div>
+</div> -->
 
 <!-- Footer -->
     <footer class="footer text-center">
