--- a/views/index.erb
+++ b/views/index.erb
@@ -23,9 +23,15 @@ body{
     line-height: 1.8;
     color: #f5f6f7;
 }
+h3 {
+  font-size: 30px;
+}
 
-p {font-size: 16px;}
-.margin {
+p {
+  font-size: 16px
+}
+
+  .margin {
   margin-bottom: 45px;
 }
 .bg-1 {
@@ -37,11 +43,11 @@ p {font-size: 16px;}
   color: #ffffff;
 }
 .bg-3 {
-  background-color: #bf00ff; /*White*/
-  color: #000000;
+  background-color: #1b1d71; /*White*/
+  color: #ffffff;
 } 
 .bg-4 {
-  background-color: #ffffff;
+  background-color: #ffffff;/*color*/
   color: #000000;
 }
 .container-fluid {
@@ -68,25 +74,26 @@ footer.footer .social-link:hover {
 }
 
 footer {
-  background-color: #ffffff;
+  background-color: #000000;
+  padding-top: 3rem;
 }
 </style>
 
  <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
-  <h3 class="margin">Master Tracker</h3>
+  <h3 class="margin"><strong>Master Tracker</strong></h3>
 </div>
 
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
-  <h3 class="margin">About Master Tracker</h3>
+  <h3 class="margin"><strong>About Master Tracker</strong></h3>
   <p>In today’s age of cord-cutting and subscription-based services, people are rapidly accumulating many recurring fees.  It is often difficult to keep track of which service we are subscribed to and when we’re being charged.  There should be some way to keep track of which services a person is paying for and when they’ll be charged again.</p>
 </div>
  
  <!-- Third Container -->
  <div class="container-fluid bg-3
  text-center">
-    <h3 class="margin">How Does It Work</h3>
+    <h3 class="margin"><strong>How Does It Work</strong></h3>
     <p>Forgot you were paying for that gym? No longer need that subscription? <strong>Master Tracker</strong> can help cancel unwanted accounts and keep track of the ones you do use.</p>
     <p>Master Tracker</strong>, we believe in transparency and the power of technology to improve people’s lives. We built a system that analyzes your specific financial situation and works to improve it.</p>
     <p>At <strong>Master Tracker</strong>, we believe in transparency and the power of technology to improve people’s lives. We built a system that analyzes your specific financial situation and works to improve it.</</p>
@@ -95,9 +102,11 @@ footer {
 <!-- Fourth Conatianer -->
 <div class="container-fluid bg-4
   text-center">
-  <h3 class="margin">Our Mission</h3>
+  <h3 class="margin"><strong>Our Mission</strong></h3>
   <p>We’ve got your back
-        <br>There are so many services out there that can help you simplify different parts of your life. Want to find a decent restaurant? Trying to book a cheap flight in a hurry? Need diapers shipped to your house by tomorrow? Done, done and done.</br>
+        <br>There are so many services out there that can help you simplify different parts of your life.</br>
+        <br> Want to find a decent restaurant?</br> 
+        <br>Trying to book a cheap flight in a hurry? Need diapers shipped to your house by tomorrow? Done, done and done.</br>
         <br>So why can’t your financial life be just as simple?</br>
         <br>That’s why we designed Master Tracker.</br></p>
 </div>
