add a line to the jumbotron

--- a/views/index.erb
+++ b/views/index.erb
@@ -101,6 +101,7 @@ footer {
  <!-- Jumbotron -->
 <div class="jumbotron text-center">
   <h1>Master Tracker</h1>
+  <p>Making finacing easier</p>
 </div>
 
 <!-- Second Container -->
